# easy_cuda_gemm

./: .clangd  CMakeLists.txt  plot_img.py
include/: benchmark.h  easy_cuda_gemm.h
src/: benchmark.cu  easy_cuda_gemm.cu  main.cu
